<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">MVVM Demo</string>

    <string name="close_app_confirmation">Press again to close app</string>
    <string name="img_desc">Image Description</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="error_occurred">Error occurred</string>
    <string name="please_wait">Please wait…</string>
    <string name="loading_more">Loading more…</string>
    <string name="please_try_again">Please try again.</string>
    <string name="error_occurred_please_try_again">Error occurred. Please try again.</string>
    <string name="google_sdk">"google_sdk"</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="msg_for_api_failure">Something went wrong.\nPlease check your internet connection or try again.</string>
    <string name="force_logout_alert_msg">Your session has been expired or your account has been deactivated.</string>
    <string name="required">Required</string>
    <string name="invalid_format">Invalid</string>
    <string name="empty_list">Empty list</string>
    <string name="no_data_found">No data found</string>
    <string name="password_is_too_short">Password is too short</string>
    <string name="password_new_confirm_not_match">New password and confirm password doesn\'t match</string>
    <string name="password_old_new_match">Old password and new password shouldn\'t be same</string>
    <string name="password_invalid">Password must contain at least 6 characters, including Capital/Lowercase, Number and Symbol</string>
    <string name="username_is_too_short">Username is too short</string>
    <string name="name_is_too_short">Username is too short</string>
    <string name="please_enter_your_registered_email">Please enter your registered email address and we will send you six digit verification code.</string>
    <string name="unable_to_process_image">Unable to process this image. Please try again.</string>
    <string name="profile_image_uploading">Please wait while picture is uploading</string>
    <string name="please_select_profile_pic">Please select profile pic</string>
    <string name="please_upload_photos">Please upload photo</string>
    <string name="please_fill_all_the_fields">Please fill all the fields</string>

    <string name="empty_list_notifications">No Notifications available</string>
    <string name="take_or_upload_photos_from_gallery">Take photos, or upload property damage photos from your gallery</string>

    <string name="dialog_body_permission_denied">This permission(s) are required to access this feature.</string>
    <string name="dialog_body_logout">Are you sure you want to logout?</string>
    <string name="dialog_body_delete_account">Are you sure you want to delete your account?</string>
    <string name="dialog_body_permission_with_never_ask_again_denied">This permission(s) are required to access this feature. Please go to App Settings to grant permission(s).</string>

    <string name="format_price">$<xliff:g id="view">%1$s</xliff:g></string>
    <string name="format_day_left"><xliff:g id="view">%1$s</xliff:g> day left</string>
    <string name="format_days_left"><xliff:g id="view">%1$s</xliff:g> days left</string>
    <string name="format_hour_left"><xliff:g id="view">%1$s</xliff:g> hr left</string>
    <string name="format_hours_left"><xliff:g id="view">%1$s</xliff:g> hrs left</string>
    <string name="format_minute_left"><xliff:g id="view">%1$s</xliff:g> min left</string>
    <string name="format_minutes_left"><xliff:g id="view">%1$s</xliff:g> mins left</string>
    <string name="format_second_left"><xliff:g id="view">%1$s</xliff:g> sec left</string>
    <string name="format_seconds_left"><xliff:g id="view">%1$s</xliff:g> secs left</string>
    <string name="format_week_ago"><xliff:g id="view">%1$s</xliff:g> week ago</string>
    <string name="format_weeks_ago"><xliff:g id="view">%1$s</xliff:g> weeks ago</string>
    <string name="format_w"><xliff:g id="view">%1$s</xliff:g>w</string>
    <string name="format_day_ago"><xliff:g id="view">%1$s</xliff:g> day ago</string>
    <string name="format_days_ago"><xliff:g id="view">%1$s</xliff:g> days ago</string>
    <string name="format_d"><xliff:g id="view">%1$s</xliff:g>d</string>
    <string name="format_hour_ago"><xliff:g id="view">%1$s</xliff:g> hr ago</string>
    <string name="format_hours_ago"><xliff:g id="view">%1$s</xliff:g> hrs ago</string>
    <string name="format_h"><xliff:g id="view">%1$s</xliff:g>h</string>
    <string name="format_minute_ago"><xliff:g id="view">%1$s</xliff:g> min ago</string>
    <string name="format_minutes_ago"><xliff:g id="view">%1$s</xliff:g> mins ago</string>
    <string name="format_m"><xliff:g id="view">%1$s</xliff:g>m</string>
    <string name="format_second_ago"><xliff:g id="view">%1$s</xliff:g> sec ago</string>
    <string name="format_seconds_ago"><xliff:g id="view">%1$s</xliff:g> secs ago</string>
    <string name="format_dob"><xliff:g id="view">%1$s</xliff:g>/<xliff:g id="view">%2$s</xliff:g>/<xliff:g id="view">%3$d</xliff:g></string>
    <string name="format_count_char"><xliff:g id="view">%1$d</xliff:g> Char</string>
    <string name="format_dot"><xliff:g id="view">%1$s</xliff:g>.</string>
    <string name="format_chat_group_name"><xliff:g id="view">%1$s</xliff:g>: <xliff:g id="view">%2$s</xliff:g></string>
    <string name="format_address">Address: <xliff:g id="view">%1$s</xliff:g></string>
    <string name="format_company_contact_number"><xliff:g id="view">%1$s</xliff:g> <xliff:g id="view">%2$s</xliff:g></string>
    <string name="format_country_code">+<xliff:g id="view">%1$s</xliff:g></string>
    <string name="format_notification_body"><xliff:g id="view">%1$s</xliff:g> <xliff:g id="view">%2$s</xliff:g></string>

    <string name="regex_user_name">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789.-_</string>

    <string name="n_a">N/A</string>
    <string name="blank_string">""</string>
    <string name="star">*</string>
    <string name="space">"&#160;"</string>
    <string name="space_space">"&#160;&#160;"</string>
    <string name="comma">","</string>
    <string name="comma_space">",&#160;"</string>
    <string name="space_amp_space">"&#160;&amp;&#160;"</string>
    <string name="dot">"."</string>
    <string name="dash">"-"</string>
    <string name="ques_mark">"?"</string>
    <string name="colon">:</string>
    <string name="zero_dot_zero">0.0</string>
    <string name="and">and</string>
    <string name="forward_slash">/</string>
    <string name="hash">#</string>
    <string name="dollar_">$ </string>
    <string name="s">S </string>
    <string name="p">P </string>
    <string name="x">x</string>
    <string name="hh_mm_am_pm">HH:MM AM/PM</string>
    <string name="mm_dd_yyy">MM/DD/YYYY</string>

    <string name="hint_user_name">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_paswrd">Password</string>
    <string name="hint_confirm_paswrd">Confirm password</string>
    <string name="hint_enter_your_email">Enter your Email</string>
    <string name="hint_enter_your_new_paswrd">Enter your new password</string>
    <string name="hint_enter_your_old_paswrd">Enter your old password</string>
    <string name="hint_enter_your_confirm_password">Enter Your Confirm Password</string>
    <string name="hint_enter_your_name">Enter Your Name</string>
    <string name="hint_enter_your_password">Enter Your Password</string>
    <string name="hint_enter_your_insurance_company">Enter Your Insurance Company</string>
    <string name="hint_enter_your_phone_number">Enter Your Phone Number</string>
    <string name="hint_enter_your_email_address">Enter Your Email Address</string>
    <string name="hint_enter_your_insurance_claim_number">Enter Your Insurance Claim Number</string>
    <string name="hint_enter_insured_s_name">Enter Insured’s Name</string>
    <string name="hint_enter_your_insured_s_phone_number">Enter Your Insured’s Phone Number</string>
    <string name="hint_enter_insured_s_email">Enter Insured’s Email</string>
    <string name="hint_enter_insured_s_address_1">Enter Insured’s Address 1</string>
    <string name="hint_enter_address_line_2">Enter Address Line 2</string>
    <string name="hint_select">Select</string>
    <string name="hint_enter_debris_limit">Enter Debris Limit</string>
    <string name="hint_enter_description_and_instructions">Enter Description and Instructions</string>
    <string name="hint_select_rating">Select Rating</string>
    <string name="hint_tell_us_what_was_wrong_with_your_information">Tell us what was wrong with your information</string>
    <string name="hint_enter_header">Enter Header</string>
    <string name="hint_enter_your_notes">Enter Your Notes</string>
    <string name="hint_type_a_message">Type a message…</string>
    <string name="hint_enter_print_name">Enter Print Name</string>

    <string name="ok" tools:ignore="ButtonCase,Typos">Ok</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="submit">Submit</string>
    <string name="grant">Grant</string>
    <string name="settings">Settings</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="take_video">Take Video</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="choose_photos">Choose Photos</string>
    <string name="choose_video">Choose Video</string>
    <string name="choose_videos">Choose Videos</string>
    <string name="save_and_submit">Save and submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="done">Done</string>
    <string name="okay">Okay</string>
    <string name="share">Share</string>
    <string name="complete">Complete</string>
    <string name="view">View</string>
    <string name="close">Close</string>

    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>

    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="forgot_password_">Forgot Password?</string>
    <string name="home">Home</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="dont_have_an_account">Don’t have an account?</string>
    <string name="verification_code">Verification Code</string>
    <string name="verification_edit_text">0</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="zero">0</string>
    <string name="resend_verification_code">Resend Verification Code</string>
    <string name="still_to_implement">Still to Implement</string>
    <string name="see_something_wrong">See Something Wrong?</string>
    <string name="add_photo">Add photo</string>
    <string name="notification">Notification</string>
    <string name="select_files">Select Files</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="zip">Zip</string>
    <string name="country">Country</string>

    <string name="just_now">Just now</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
</resources>