<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clRoot"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:layout_margin="@dimen/_16sdp"
    android:background="@drawable/bg_light_orange_border_orange_corner_70"
    android:paddingBottom="@dimen/_24sdp"
    tools:context=".activity.base.BaseActivity">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="@dimen/_19sdp"
        android:layout_height="@dimen/_19sdp"
        android:layout_margin="@dimen/_10sdp"
        android:contentDescription="@string/img_desc"
        android:foreground="@drawable/ripple_box"
        android:padding="@dimen/_3sdp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_cancel"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/tvTitle"
        style="@style/EditTextStyle"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_24sdp"
        android:gravity="center"
        android:text="@string/notification"
        android:textSize="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubTitle"
        style="@style/TextViewRegular"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@null"
        android:gravity="center"
        android:paddingBottom="0dp"
        android:text="@string/take_or_upload_photos_from_gallery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/btnOkay"
        style="@style/ButtonXLargeOrangeStyle"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_19sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:text="@string/okay"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
        tools:ignore="UnusedAttribute" />

</androidx.constraintlayout.widget.ConstraintLayout>